--- a/style.css
+++ b/style.css
@@ -1,39 +1,107 @@
-* {
+*/* {
     border: 1px solid greenyellow;
-}
+}*/
 html { 
     box-sizing: border-box;
 }
 
 body {
     display: grid;
-    grid-template-columns: 1fr auto 1fr;
-    grid-template-rows: 150px auto 1fr;
-    background-color: whitesmoke;
+    grid-template-columns: 1fr minmax(auto, 80rem) 1fr;
+    grid-template-rows: 6rem auto 1fr;
+    background: #f3f3f3;
     grid-template-areas:
-    "header" "header" "header"
-    "main"
-    "footer" "footer" "footer"
+    "header header header"
+    ".      main        ."
+    "footer footer footer";
+    grid-gap: 1rem;
+    font-family: sans-serif;
+    line-height: 1.4;
 }
 
 .header {
     grid-area: header;
     display: flex;
+    position: fixed;
+    z-index: 20;
+    top: 0; left: 0;
+    flex-direction: column;
+    width: 100%; height: 6rem;
+    align-items: center;
+    justify-content: center;
+    background: rgba(255, 255, 255, 0.95);
+    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.1);
+    padding: 0 1rem;
 }
 
+.site-title {
+    margin: 0 0 0.75rem 0;
+    line-height: 1;
+}
+
+.site-title a {
+    font-size: 1.4rem;
+    letter-spacing: -1px;
+    color: #000;
+    text-decoration: none;
+    font-weight: bold;
+  }
+  
+.site-title a:hover {
+    text-decoration: underline;
+  }
+
+.navigation {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+.navigation > ul {
+    display: flex;
+    list-style: none;
+    margin: 0 -1rem 0 0; padding: 0;
+}
+
+.navigation > ul > li { 
+    margin: 0 1rem; 
+}
+  
+.nav-link {
+    color: #000;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.nav-link:hover { 
+    text-decoration: underline; 
+}
+  
 .main {
     display: grid;
+    grid-gap: 1rem;
     grid-area: main;
     grid-template-areas: 
-    "hero" "top-stories" "featured" "special-edition" "most-recent" "highlight"
+    "hero" "featured" "top-stories" "special-edition" "most-recent" "highlight";
 }
 
 .block {
     display: flex;
+    flex-direction: column;
+    padding: 2rem;
+    background: white;
+    box-shadow: 0 2px 4px -2px rgba(0, 0, 0, 0.2);
+    width: 100%;
 }
 
 .hero {
     grid-area: hero;
+    justify-content: flex-end;
+    background-repeat: no-repeat;
+    background-size: cover; 
+    position: relative;
+    z-index: 1;
+    min-height: 25rem;
 }
 
 .top-stories {
@@ -46,6 +114,12 @@ body {
 
 .special-edition {
     grid-area: special-edition;
+    color: whitesmoke;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    min-height: 16rem;  
+    position: relative;
 }
 
 .most-recent {
@@ -54,4 +128,54 @@ body {
 
 .highlight {
     grid-area: highlight;
+    justify-content: flex-end;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    z-index: 1;
+    min-height: 12.5rem;
+    color: white;
 }
+
+.stories {
+    display: grid;
+    grid-gap: 1.5rem 2rem;
+    grid-template-columns: 
+    repeat(auto-fit, minmax(10rem, 1fr));
+}
+
+.story {
+    display: block;
+    text-decoration: none;
+    color: inherit;
+  }
+
+.footer {
+    grid-area: footer;
+    height: 2.5rem;
+    align-self: center;
+    justify-self: center;
+}
+
+@media screen and (min-width: 50em) {
+    body { grid-template-rows: 4rem 1fr auto; }
+    
+    .main {
+      grid-template-columns: 
+        minmax(16rem, 1fr) 1fr 1fr minmax(16rem, 1fr);
+      grid-template-rows: 
+        auto auto minmax(18rem, auto) auto;
+      grid-template-areas:
+        "hero hero hero highlight"
+        "hero hero hero featured"
+        "top-stories special-edition special-edition featured"
+        "top-stories most-recent most-recent most-recent";
+    }
+    .header {
+      flex-direction: row;
+      height: 4rem;
+    }
+    .site-title {
+      flex: 1 1 auto;
+    }
+  }
