--- a/style.css
+++ b/style.css
@@ -4,11 +4,12 @@
 html { 
     box-sizing: border-box;
 }
+*, *:before, *:after { box-sizing: inherit; }
 
 body {
     display: grid;
     grid-template-columns: 1fr minmax(auto, 80rem) 1fr;
-    grid-template-rows: 6rem auto 1fr;
+    grid-template-rows: 6rem 1fr auto;
     background: #f3f3f3;
     grid-template-areas:
     "header header header"
@@ -23,7 +24,7 @@ body {
     grid-area: header;
     display: flex;
     position: fixed;
-    z-index: 20;
+    z-index: 999;
     top: 0; left: 0;
     flex-direction: column;
     width: 100%; height: 6rem;
@@ -93,6 +94,20 @@ body {
     box-shadow: 0 2px 4px -2px rgba(0, 0, 0, 0.2);
     width: 100%;
 }
+
+.block__title {
+    text-transform: uppercase;
+    font-size: 1rem;
+    margin: 0 0 2.5rem;
+  }
+    .block__title::after {
+      content: "";
+      display: block;
+      background: black;
+      width: 2rem; height: 1px;
+      position: relative;
+      top: 1rem;
+    }
 
 .hero {
     grid-area: hero;
