final changes to .block and .header

--- a/style.css
+++ b/style.css
@@ -61,11 +61,11 @@ body {
 .navigation > ul {
     display: flex;
     list-style: none;
-    margin: 0 -1rem 0 0; padding: 0;
+    margin: 0 1rem;   
 }
 
 .navigation > ul > li { 
-    margin: 0 1rem; 
+    margin: 0 1rem;     
 }
   
 .nav-link {
@@ -89,10 +89,12 @@ body {
 .block {
     display: flex;
     flex-direction: column;
-    padding: 2rem;
     background: white;
     box-shadow: 0 2px 4px -2px rgba(0, 0, 0, 0.2);
-    width: 100%;
+}
+
+.block-content {
+    padding: 2rem;
 }
 
 .block__title {
